--- a/game.html
+++ b/game.html
@@ -80,8 +80,11 @@
           <ul class="sub-menu">
             <li><a class="link-name" href="#">Cabang</a></li>
             <li><a href="#">Tangerang</a></li>
+            <button class="upgrade" onclick="">Upgrade</button>
             <li><a href="#">Depok</a></li>
+            <button class="upgrade" onclick="">Upgrade</button>
             <li><a href="#">Jogja</a></li>
+            <button class="upgrade" onclick="">Upgrade</button>
           </ul>
         </li>
         <li>
@@ -95,7 +98,7 @@
         </li>
         <li>
           <a href="#" onclick="saveButton()">
-            <i class='bx bxs-save'></i>
+            <i class="bx bxs-save"></i>
             <span class="link-name">Save</span>
           </a>
           <ul class="sub-menu blank">
@@ -104,11 +107,11 @@
         </li>
         <li>
           <a href="#" onclick="resetGame()">
-            <i class='bx bx-reset'></i>
-            <span class="link-name">Reset</span>
+            <i class="bx bx-reset"></i>
+            <span class="link-name">Reset Progress</span>
           </a>
           <ul class="sub-menu blank">
-            <li><a class="link-name" href="#" onclick="resetGame()">Reset</a></li>
+            <li><a class="link-name" href="#" onclick="resetGame()">Reset Progress</a></li>
           </ul>
         </li>
         <li>
