--- a/game.html
+++ b/game.html
@@ -138,7 +138,7 @@
         <div class="informasi">
           <p>Uang : Rp.<span id="uang">0</span></p>
           <p>Harga Tahu = Rp.<span id="click">0</span></p>
-          <p>Auto Click <span id="autoClick">0</span> Tahu/<span id="autoTime">0</span>s</p>
+          <p>Auto Click <span id="autoClick">0</span> Tahu/<span id="timeDisplay">0</span>s</p>
         </div>
       </div>
     </section>
