--- a/game.html
+++ b/game.html
@@ -33,16 +33,19 @@
             <li><a class="link-name" href="#">Bahan</a></li>
             <li>
               <a>Bumbu [+1 Harga] </a>
+              <a class="harga">Rp.<span id="hargaUpgrade">0</span></a>
             </li>
-            <button class="upgrade" onclick="upgradeClick()">Upgrade for Rp.<span id="hargaUpgrade">0</span></button>
+            <button class="upgrade" onclick="upgradeClick()">Upgrade</button>
             <li>
               <a>Telur [+5 Harga]</a>
+              <a class="harga">Rp.<span id="hargaUpgrade1">0</span></a>
             </li>
-            <button class="upgrade" onclick="upgradeClick1()">Upgrade for Rp.<span id="hargaUpgrade1">0</span></button>
+            <button class="upgrade" onclick="upgradeClick1()">Upgrade</button>
             <li>
               <a>Keju [+10 Harga]</a>
+              <a class="harga">Rp.<span id="hargaUpgrade2">0</span></a>
             </li>
-            <button class="upgrade" onclick="upgradeClick2()">Upgrade for Rp.<span id="hargaUpgrade2">0</span></button>
+            <button class="upgrade" onclick="upgradeClick2()">Upgrade</button>
           </ul>
         </li>
         <li>
@@ -57,16 +60,19 @@
             <li><a class="link-name" href="#">Mobil</a></li>
             <li>
               <a href="#">Speaker [+1 Auto]</a>
+              <a class="harga">Rp.<span id="hargaAuto">0</span></a>
             </li>
-            <button class="upgrade" onclick="buyAuto()">Upgrade for Rp.<span id="hargaAuto">0</span></button>
+            <button class="upgrade" onclick="buyAuto()">Upgrade</button>
             <li>
               <a href="#">Panci [+3 Auto]</a>
+              <a class="harga">Rp.<span id="hargaAuto1">0</span></a>
             </li>
-            <button class="upgrade" onclick="buyAuto1()">Upgrade for Rp.<span id="hargaAuto1">0</span></button>
+            <button class="upgrade" onclick="buyAuto1()">Upgrade</button>
             <li>
               <a href="#">Tenda [+5 Auto]</a>
+              <a class="harga">Rp.<span id="hargaAuto2">0</span></a>
             </li>
-            <button class="upgrade" onclick="buyAuto2()">Upgrade for Rp.<span id="hargaAuto2">0</span></button>
+            <button class="upgrade" onclick="buyAuto2()">Upgrade</button>
           </ul>
         </li>
         <li>
@@ -79,8 +85,11 @@
           </div>
           <ul class="sub-menu">
             <li><a class="link-name" href="#">Cabang</a></li>
-            <li><a href="#">Tangerang (Efisiensi x2)</a></li>
-            <button class="upgrade" onclick="tangerang()">Upgrade for Rp.<span id="hargaPindah">0</span></button>
+            <li>
+              <a href="#">Tangerang (Efisiensi x2)</a>
+              <a>Rp.<span id="hargaPindah">0</span></a>
+            </li>
+            <button class="upgrade" onclick="tangerang()">Upgrade </button>
             <li><a href="#">Depok</a></li>
             <button class="upgrade" onclick="">Upgrade</button>
             <li><a href="#">Jogja</a></li>
