--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,9 +1,137 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Document</title>
-</head>
-<body>
-    <h1>About Us</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>About Us | Tahu Kotak</title>
+        <link rel="stylesheet" href="style2.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
+    </head>
+    <body>
+        <div class="banner">
+            <img class="layer-1" src="img/background.png">
+            <img class="layer-2" src="img/meteor.png">
+
+            <div class="layer-3">
+                <a href="game.html">
+                    <button class="button-pushable" role="button">
+                        <span class="button-shadow"></span>
+                        <span class="button-edge"></span>
+                        <span class="button-front text">
+                            Back to the Game!
+                        </span>
+                    </button>
+                </a>
+                <h1>Hallooo!</h1>
+                <p>Terima kasih sudah mau bermain tahu kotak!</p>
+                <img class="logo" src="img/logo.png">
+                <img class="bangunan" src="img/monas.png">
+            </div>
+
+            <img class="layer-4" src="img/4.png">
+            <img class="layer-5" src="img/5.png">
+            <img src="img/6.png">
+        </div>
+
+        <div class="content">
+            <h1>About Us</h1>
+            <div class="container">
+                <div class="card" style="--clr:#009688">
+                    <div class="imgBx">
+                        <img src="img/Leo.jpg">
+                    </div>
+                    <div class="informasi">
+                        <h2>Leonardo Tyoes Huibu</h2>
+                        <ul>
+                            <li>NIM: 00000065503</li>
+                            <li>Jurusan : Informatika</li>
+                            <li>Angkatan: 2022</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card" style="--clr:#ff3e7f">
+                    <div class="imgBx">
+                        <img src="img/jose.jpg">
+                    </div>
+                    <div class="informasi">
+                        <h2>Jose Andreas Lie</h2>
+                        <ul>
+                            <li>NIM: 00000067097</li>
+                            <li>Jurusan : Informatika</li>
+                            <li>Angkatan: 2022</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card" style="--clr:#03a9f4">
+                    <div class="imgBx">
+                        <img src="img/Reynard.jpg">
+                    </div>
+                    <div class="informasi">
+                        <h2>Reynard</h2>
+                        <ul>
+                            <li>NIM: 00000067065</li>
+                            <li>Jurusan: Informatika</li>
+                            <li>Angkatan: 2022</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="container1">
+                <div class="card" style="--clr:#f4a460">
+                    <div class="imgBx">
+                        <img src="img/Owen.jpg">
+                    </div>
+                    <div class="informasi">
+                        <h2>Owen Christian Cahyadi</h2>
+                        <ul>
+                            <li>NIM: 00000067055</li>
+                            <li>Jurusan : Informatika</li>
+                            <li>Angkatan: 2022</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card" style="--clr:#ee82ee">
+                    <div class="imgBx">
+
+                    </div>
+                    <div class="informasi">
+                        <h2>Kristoforus Kharis Putra Sadsuitubun</h2>
+                        <ul>
+                            <li>NIM: 00000067127</li>
+                            <li>Jurusan : Informatika</li>
+                            <li>Angkatan: 2022</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="maincontainer">
+                <div class="thecard">
+                    <div class="thefront">Refferences</div>
+                    <div class="theback">
+                        <ul>
+                            <li>
+                                Musik. Retrieved from:
+                                <a href="https://www.youtube.com/watch?v=_hFHa42GPcs">https://www.youtube.com/watch?v=_hFHa42GPcs</a>
+                                <a href="https://www.youtube.com/watch?v=VWm5EyvjPjw">https://www.youtube.com/watch?v=VWm5EyvjPjw</a>
+                                <a href="https://www.youtube.com/watch?v=0A9dJHntEsc">https://www.youtube.com/watch?v=0A9dJHntEsc</a>
+                            </li>
+                            
+                            <li>
+                                Tutorial. Retrieved from:
+                                <a href="https://www.youtube.com/watch?v=WH6t4nC0Ueg&t=241s">https://www.youtube.com/watch?v=WH6t4nC0Ueg&t=241s</a>
+                                <a href="https://www.youtube.com/watch?v=L05rayKapyg">https://www.youtube.com/watch?v=L05rayKapyg</a>
+                            </li>
+                            <li>
+                                Element. Retrieved from:
+                                <a href="https://boxicons.com/?query=">https://boxicons.com/?query=</a>
+                            </li>
+                            <li>
+                                Consept Game. Retrieved from: Tahu Bulat
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        <script src="script1.js"></script>
+    </body>
 </html>
