--- a/aboutUs.html
+++ b/aboutUs.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="card" style="--clr:#ee82ee">
                     <div class="imgBx">
-
+                        <img src="img/kristod.jpeg">
                     </div>
                     <div class="informasi">
                         <h2>Kristoforus Kharis Putra Sadsuitubun</h2>
