--- a/game.html
+++ b/game.html
@@ -139,7 +139,7 @@
         <img class="orang" src="img/pedagang.png" onclick="clicking()" />
         <img class="toa" src="img/toa.png" onclick="clicking()" />
         <img class="wajan" src="img/wajan.png" onclick="clicking()" />
-        <img class="mobil" src="img/mobil.png" onclick="clicking()" />
+        <img class="mobil" src="img/truck.png" onclick="clicking()" />
         <div class="informasi">
           <p>Uang : Rp.<span id="uang">0</span></p>
           <p>Harga Tahu = Rp.<span id="click">0</span></p>
