--- a/game.html
+++ b/game.html
@@ -146,7 +146,9 @@
           <p>Pesanan =  <span id="autoClick">0</span> Uang/<span id="timeDisplay">0</span>s</p>
           
         </div>
-        <p>Rush : <span id="rushCounter">0</span></p>
+        <div id="progress">
+          <div id="GoldRush"></div>
+        </div>
       </div>
     </section>
     
