--- a/game.html
+++ b/game.html
@@ -136,6 +136,7 @@
       </div>
       <div class="game">
         <img class="jalanan" src="img/background.jpg" />
+        <img class="notif" src="img/clickme.png">
         <img class="orang" src="img/pedagang.png" onclick="clicking()" />
         <img class="toa" src="img/toa.png" onclick="clicking()" />
         <img class="wajan" src="img/wajan.png" onclick="clicking()" />
