up iklan & foto

--- a/game.html
+++ b/game.html
@@ -35,44 +35,44 @@
               <a>Bumbu -- Rp.<span id="hargaUpgrade">0</span> </a>
               <a class="harga">Harga Tahu +1 Rupiah</a>
             </li>
-            <button class="upgrade" onclick="upgradeClick()">Beli!</button>
+            <button class="upgrade" onclick="upgradeClick()">Beli</button>
             <li>
               <a>Telur -- Rp.<span id="hargaUpgrade1">0</span></a>
               <a class="harga">Harga Tahu +5 Rupiah</a>
             </li>
-            <button class="upgrade" onclick="upgradeClick1()">Beli!</button>
+            <button class="upgrade" onclick="upgradeClick1()">Beli</button>
             <li>
               <a>Keju -- Rp.<span id="hargaUpgrade2">0</span></a>
               <a class="harga">Harga Tahu +10 Rupiah</a>
             </li>
-            <button class="upgrade" onclick="upgradeClick2()">Beli!</button>
+            <button class="upgrade" onclick="upgradeClick2()">Beli</button>
           </ul>
         </li>
         <li>
           <div class="icon-link">
             <a href="#">
               <i class="bx bxs-truck"></i>
-              <span class="link-name">Mobil</span>
+              <span class="link-name">Iklan</span>
             </a>
             <i class="bx bxs-down-arrow bawah"></i>
           </div>
           <ul class="sub-menu">
-            <li><a class="link-name" href="#">Mobil</a></li>
+            <li><a class="link-name" href="#">Iklan</a></li>
             <li>
-              <a href="#">Speaker -- Rp.<span id="hargaAuto">0</span></a>
+              <a href="#">Pamflet -- Rp.<span id="hargaAuto">0</span></a>
               <a class="harga">Pesanan +1/s</a>
             </li>
-            <button class="upgrade" onclick="buyAuto()">Upgrade</button>
+            <button class="upgrade" onclick="buyAuto()">Pasang</button>
             <li>
-              <a href="#">Panci -- Rp.<span id="hargaAuto1">0</span></a>
+              <a href="#">Sosmed -- Rp.<span id="hargaAuto1">0</span></a>
               <a class="harga">Pesanan +4/s</a>
             </li>
-            <button class="upgrade" onclick="buyAuto1()">Upgrade</button>
+            <button class="upgrade" onclick="buyAuto1()">Upload</button>
             <li>
-              <a href="#">Tenda -- Rp.<span id="hargaAuto2">0</span></a>
+              <a href="#">Billboard -- Rp.<span id="hargaAuto2">0</span></a>
               <a class="harga">Pesanan +7/s</a>
             </li>
-            <button class="upgrade" onclick="buyAuto2()">Upgrade</button>
+            <button class="upgrade" onclick="buyAuto2()">Bangun</button>
           </ul>
         </li>
         <li>
