--- a/game.html
+++ b/game.html
@@ -51,7 +51,7 @@
         <li>
           <div class="icon-link">
             <a href="#">
-              <i class="bx bxs-truck"></i>
+              <i class='bx bx-news' ></i>
               <span class="link-name">Iklan</span>
             </a>
             <i class="bx bxs-down-arrow bawah"></i>
