Big rush update - v0.91 Beta

--- a/game.html
+++ b/game.html
@@ -150,6 +150,7 @@
         <div id="progress">
           <div id="GoldRush"></div>
         </div>
+        <div id="displayRush"> </div>
       </div>
     </section>
     <script src="script.js"></script>
