--- a/game.html
+++ b/game.html
@@ -136,7 +136,9 @@
       </div>
       <div class="game">
         <img class="jalanan" src="img/background.jpg" />
-        <img class="notif" src="img/clickme.png">
+        <div class="notif">
+          <p>Klik Mobil!</p>
+        </div>
         <img class="orang" src="img/pedagang.png" onclick="clicking()" />
         <img class="toa" src="img/toa.png" onclick="clicking()" />
         <img class="wajan" src="img/wajan.png" onclick="clicking()" />
